--- a/css/animation.css
+++ b/css/animation.css
@@ -35,19 +35,20 @@ h1 {
 }
 
 .wrapper {
-  border: 1px solid #BABABA;
+/*  border: 1px solid #BABABA;
   height: 540px;
-  width: 540px;
+  width: 540px;*/
   background-color: white;
   margin: 0 auto;
   box-sizing: border-box;
-  padding: 180px;
+  padding: 5% 46%;
 }
 
 .square {
   float: left;
-  height: 25px;
+  height: 100px;
   width: 25px;
+  opacity: .4;
   display: inline-block;
   background-color: black;
 }
